<resources>
    <string name="app_name">EVE Reaction Calculator</string>
    <string name="save">Save</string>
    <string name="load_from_db">load from db</string>
    <string name="load_from_web">load from web</string>
    <string name="sell">Sell:</string>
    <string name="buy">Buy:</string>
    <string name="vol">Vol:</string>
    <string name="quantity">Quantity:</string>
    <string name="reaction">Reaction</string>
    <string name="reaction_name_not_filled">\"Reaction name\" field is not filled</string>
    <string name="runs_not_filled">\"Runs\" field is not filled</string>
    <string name="brokers_fee_not_correct">\"Broker\'s fee\" field is not correct</string>
    <string name="salex_tax_not_correct">\"Sales tax\" field is not correct</string>
    <string name="reaction_tax_not_correct">\"Reaction tax\" field is not correct</string>
    <string name="about">About</string>
    <string name="ingame_alisa_red_alert">ingame: Alisa Red alert</string>
    <string name="github_http">github: /nsmapp/EVEReactoionCalculator</string>
    <string name="eve_reaction_calculator_application">EVE Reaction Calculator - application for calculating reactions in the game EVE Online</string>
    <string name="email">email: nsmappinfo@gmail.com</string>
    <string name="runs">Runs:</string>
    <string name="broker_s_fee">Broker\'s fee %:</string>
    <string name="sales_tax">Sales tax %:</string>
    <string name="regions">Regions:</string>
    <string name="reaction_tax">Reaction tax %:</string>
    <string name="reaction_time">Reaction time:</string>
    <string name="buy_spase">Buy, ISK:</string>
    <string name="sell_spase">Sell, ISK:</string>
    <string name="volume_of_material">Volume of material, m³: </string>
    <string name="cost_of_material">Cost of materials( with tax)</string>
    <string name="reaction_information">Reaction information</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url">https://docs.google.com/document/d/1iOy_XOMJoWQ8mKnLUaqg9SjWX7geTLvbXfnLQ04eKyw/edit</string>
    <string name="settings">Settings</string>
    <string name="volume_m3">Volume, m³:</string>
    <string name="quantity_unit">Quantity, unit:</string>
    <string name="sell_isk">Sell, ISK:</string>
    <string name="buy_isk">Buy, ISK:</string>

    <array name="regions">
        <item name="Jita">The Forge(Jita)</item>
        <item name="Rens">Heimatar(Rens)</item>
        <item name="Hek">Metropolis(Hek)</item>
        <item name="Amarr">Domain(Amarr)</item>
        <item name="Dodixie">Sinq Laison(Dodixie)</item>
    </array>

    <array name="reactions">
        <item name="Pure Strong Exile Booster">Pure Strong Exile Booster</item>
        <item name="Pure Strong Mindflood Booster">Pure Strong Mindflood Booster</item>
        <item name="Pure Strong Frentix Booster">Pure Strong Frentix Booster</item>
        <item name="Pure Strong X-Instinct Booster">Pure Strong X-Instinct Booster</item>
        <item name="Pure Strong Sooth Sayer Booster">Pure Strong Sooth Sayer Booster</item>
        <item name="Titanium Chromide">Titanium Chromide</item>
        <item name="Pure Synth Blue Pill Booster">Pure Synth Blue Pill Booster</item>
        <item name="Crystallite Alloy">Crystallite Alloy</item>
        <item name="Pure Synth Crash Booster">Pure Synth Crash Booster</item>
        <item name="Fernite Alloy">Fernite Alloy</item>
        <item name="Pure Synth Drop Booster">Pure Synth Drop Booster</item>
        <item name="Rolled Tungsten Alloy">Rolled Tungsten Alloy</item>
        <item name="Pure Synth Exile Booster">Pure Synth Exile Booster</item>
        <item name="Silicon Diborite">Silicon Diborite</item>
        <item name="Pure Synth Frentix Booster">Pure Synth Frentix Booster</item>
        <item name="Carbon Polymers">Carbon Polymers</item>
        <item name="Pure Synth Mindflood Booster">Pure Synth Mindflood Booster</item>
        <item name="Ceramic Powder">Ceramic Powder</item>
        <item name="Pure Synth Sooth Sayer Booster">Pure Synth Sooth Sayer Booster</item>
        <item name="Sulfuric Acid">Sulfuric Acid</item>
        <item name="Pure Synth X-Instinct Booster">Pure Synth X-Instinct Booster</item>
        <item name="Pure Standard Blue Pill Booster">Pure Standard Blue Pill Booster</item>
        <item name="Platinum Technite">Platinum Technite</item>
        <item name="Caesarium Cadmide">Caesarium Cadmide</item>
        <item name="Solerium">Solerium</item>
        <item name="Hexite">Hexite</item>
        <item name="Pure Improved Blue Pill Booster">Pure Improved Blue Pill Booster</item>
        <item name="Hyperflurite">Hyperflurite</item>
        <item name="Pure Standard Crash Booster">Pure Standard Crash Booster</item>
        <item name="Neo Mercurite">Neo Mercurite</item>
        <item name="Dysporite">Dysporite</item>
        <item name="Ferrofluid">Ferrofluid</item>
        <item name="Crystalline Carbonide">Crystalline Carbonide</item>
        <item name="Titanium Carbide">Titanium Carbide</item>
        <item name="Tungsten Carbide">Tungsten Carbide</item>
        <item name="Fernite Carbide">Fernite Carbide</item>
        <item name="Pure Standard Frentix Booster">Pure Standard Frentix Booster</item>
        <item name="Fermionic Condensates">Fermionic Condensates</item>
        <item name="Sylramic Fibers">Sylramic Fibers</item>
        <item name="Fullerides">Fullerides</item>
        <item name="Vanadium Hafnite">Vanadium Hafnite</item>
        <item name="Prometium">Prometium</item>
        <item name="Phenolic Composites">Phenolic Composites</item>
        <item name="Nanotransistors">Nanotransistors</item>
        <item name="Hypersynaptic Fibers">Hypersynaptic Fibers</item>
        <item name="Ferrogel">Ferrogel</item>
        <item name="Unrefined Vanadium Hafnite">Unrefined Vanadium Hafnite</item>
        <item name="Unrefined Platinum Technite">Unrefined Platinum Technite</item>
        <item name="Unrefined Solerium">Unrefined Solerium</item>
        <item name="Unrefined Caesarium Cadmide">Unrefined Caesarium Cadmide</item>
        <item name="Thulium Hafnite">Thulium Hafnite</item>
        <item name="Unrefined Hexite">Unrefined Hexite</item>
        <item name="Promethium Mercurite">Promethium Mercurite</item>
        <item name="Unrefined Promethium Mercurite">Unrefined Promethium Mercurite</item>
        <item name="Unrefined Rolled Tungsten Alloy">Unrefined Rolled Tungsten Alloy</item>
        <item name="Unrefined Thulium Hafnite">Unrefined Thulium Hafnite</item>
        <item name="Unrefined Titanium Chromide">Unrefined Titanium Chromide</item>
        <item name="Unrefined Fernite Alloy">Unrefined Fernite Alloy</item>
        <item name="Unrefined Crystallite Alloy">Unrefined Crystallite Alloy</item>
        <item name="Pure Strong Blue Pill Booster">Pure Strong Blue Pill Booster</item>
        <item name="Photonic Metamaterials">Photonic Metamaterials</item>
        <item name="Terahertz Metamaterials">Terahertz Metamaterials</item>
        <item name="Plasmonic Metamaterials">Plasmonic Metamaterials</item>
        <item name="Nonlinear Metamaterials">Nonlinear Metamaterials</item>
        <item name="Unrefined Fluxed Condensates">Unrefined Fluxed Condensates</item>
        <item name="Unrefined Dysporite">Unrefined Dysporite</item>
        <item name="Unrefined Neo Mercurite">Unrefined Neo Mercurite</item>
        <item name="Unrefined Prometium">Unrefined Prometium</item>
        <item name="Fulleroferrocene">Fulleroferrocene</item>
        <item name="Unrefined Ferrofluid">Unrefined Ferrofluid</item>
        <item name="PPD Fullerene Fibers">PPD Fullerene Fibers</item>
        <item name="Unrefined Hyperflurite">Unrefined Hyperflurite</item>
        <item name="Fullerene Intercalated Graphite">Fullerene Intercalated Graphite</item>
        <item name="Methanofullerene">Methanofullerene</item>
        <item name="Lanthanum Metallofullerene">Lanthanum Metallofullerene</item>
        <item name="Scandium Metallofullerene">Scandium Metallofullerene</item>
        <item name="Graphene Nanoribbons">Graphene Nanoribbons</item>
        <item name="Carbon-86 Epoxy Resin">Carbon-86 Epoxy Resin</item>
        <item name="C3-FTM Acid">C3-FTM Acid</item>
        <item name="Fluxed Condensates">Fluxed Condensates</item>
        <item name="Pure Standard Drop Booster">Pure Standard Drop Booster</item>
        <item name="Pure Standard Exile Booster">Pure Standard Exile Booster</item>
        <item name="Pure Standard Mindflood Booster">Pure Standard Mindflood Booster</item>
        <item name="Pure Standard X-Instinct Booster">Pure Standard X-Instinct Booster</item>
        <item name="Pure Standard Sooth Sayer Booster">Pure Standard Sooth Sayer Booster</item>
        <item name="Pure Improved Crash Booster">Pure Improved Crash Booster</item>
        <item name="Pure Improved Drop Booster">Pure Improved Drop Booster</item>
        <item name="Pure Improved Exile Booster">Pure Improved Exile Booster</item>
        <item name="Pure Improved Mindflood Booster">Pure Improved Mindflood Booster</item>
        <item name="Pure Improved Frentix Booster">Pure Improved Frentix Booster</item>
        <item name="Pure Improved X-Instinct Booster">Pure Improved X-Instinct Booster</item>
        <item name="Pure Improved Sooth Sayer Booster">Pure Improved Sooth Sayer Booster</item>
        <item name="Pure Strong Crash Booster">Pure Strong Crash Booster</item>
        <item name="Pure Strong Drop Booster">Pure Strong Drop Booster</item>

    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reaction_cost_isk">Reaction cost, ISK</string>
    <string name="eve_online_and_the_eve_logo_are_the_registered_trademarks_of_ccp_hf_all_rights_are_reserved_worldwide_all_other_trademarks_are_the_property_of_their_respective_owners_eve_online_the_eve_logo_eve_and_all_associated_logos_and_designs_are_the_intellectual_property_of_ccp_hf_all_artwork_screenshots_characters_vehicles_storylines_world_facts_or_other_recognizable_features_of_the_intellectual_property_relating_to_these_trademarks_are_likewise_the_intellectual_property_of_ccp_hf_ccp_hf_ccp_is_in_no_way_responsible_for_the_content_on_or_functioning_of_this_app_nor_can_it_be_liable_for_any_damage_arising_from_the_use_of_this_app">EVE Online and the EVE logo are the registered trademarks of CCP hf. All rights are reserved worldwide. All other trademarks are the property of their respective owners. EVE Online, the EVE logo, EVE and all associated logos and designs are the intellectual property of CCP hf. All artwork, screenshots, characters, vehicles, storylines, world facts or other recognizable features of the intellectual property relating to these trademarks are likewise the intellectual property of CCP hf. CCP hf. CCP is in no way responsible for the content on or functioning of this app, nor can it be liable for any damage arising from the use of this app.</string>
    <string name="contacts">Contacts:</string>
    <string name="all">All</string>
    <string name="boosters">Boosters</string>
    <string name="fullerites">Tech 3</string>
    <string name="composite">Tech 2</string>


</resources>
